# durust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
benches/: payload_thresholds.json  replay_core.rs
benches/baselines/: durust-mixed-postgres-100-shards.json  durust-mixed-postgres.json  durust-mixed-sqlite-1-worker.json  durust-mixed-sqlite.json
benchtools/: Cargo.toml
durust-macros/: Cargo.toml
durust-macros/src/: lib.rs
examples/: activity_heartbeat.rs  activity_map.rs  activity_spawn_join_all.rs  activity_spawn_select_all.rs  child_workflow_map.rs  child_workflows.rs  continue_as_new.rs  hello_activity.rs  join_activities.rs  local_remote_activity.rs  map_reduce.rs  payload_offload.rs  query_projection.rs  select_approval.rs  signal_wait.rs  timer_wait.rs  version_branch.rs  worker_registration.rs
impl-plan/: 0001-replay-core.md  0002-durable-activity-timer-signal.md  0003-select-and-join.md  0004-query-projections.md  0005-child-workflows.md  0006-versioning.md  0007-payload-offloading-and-continue-as-new.md  0008-deterministic-simulation-hardening.md  0009-recovery-flow-control.md  0009-sqlite-shard-files.md  0010-sqlite-shard-files.md  0011-postgres-provider.md  0012-performance-hardening.md  0013-postgres-shard-native.md  0014-typescript-parity.md  0015-review-remediation.md  README.md
src/: backend.rs  error.rs  history.rs  ids.rs  lib.rs  manifest.rs  memory.rs  options.rs  payload.rs  payload_backend.rs  postgres.rs  provider_util.rs  registry.rs  runtime.rs  sim.rs  sqlite.rs  worker.rs
src/postgres/: helpers.rs  mod.rs  payloads.rs  tests.rs
tests/: benchmark_thresholds.rs  compile_fail.rs  contract_fixtures.rs  manifest_cli.rs  payload.rs  provider_conformance.rs  replay_core.rs  sim_worker.rs  worker_run.rs
tests/fixtures/: garage.compose.yml  garage.toml  postgres.compose.yml
tests/ui/: collection_input.rs  collection_input.stderr  instant_now.rs  instant_now.stderr  plain_join_future.rs  plain_join_future.stderr  primitive_input.rs  primitive_input.stderr  rand_random.rs  rand_random.stderr  strict_mode.rs  strict_mode.stderr  system_time.rs  system_time.stderr  tokio_select.rs  tokio_select.stderr  tokio_sleep.rs  tokio_sleep.stderr  tokio_spawn.rs  tokio_spawn.stderr  unknown_await.rs  unknown_await.stderr
typescript/: README.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.type-tests.json  vitest.config.ts
typescript/fixtures/contract/: benchmark-output.json  core-events.json  provider-io.json
typescript/scripts/: check-fixtures.mjs  check-postgres.mjs  check-release.mjs  determinism-lint.mjs  package-dry-run.mjs
typescript/test-d/determinism/computed-invalid/: workflows.ts
typescript/test-d/determinism/invalid/: workflows.ts
typescript/test-d/determinism/valid/: workflows.ts
typescript/test-d/negative/: type-safety.ts
