[package]
name = "durust"
version = "0.1.0"
edition = "2024"

[dependencies]
durust-macros = { version = "0.1.0", path = "durust-macros" }
futures = "0.3.32"
hex = "0.4.3"
inventory = "0.3.24"
rmp-serde = "1.3.1"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
trybuild = "1.0.116"

[[bench]]
name = "replay_core"
harness = false
