[package]
name = "durust"
version = "0.1.0"
edition = "2024"
description = "A durable workflow runtime for Rust services."
license = "MIT"
repository = "https://github.com/danthegoodman1/durust"

[dependencies]
deadpool-postgres = "0.14.1"
durust-macros = { version = "0.1.0", path = "durust-macros" }
futures = "0.3.32"
hex = "0.4.3"
inventory = "0.3.24"
rmp-serde = "1.3.1"
rusqlite = "0.37.0"
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "net", "time", "sync"] }
tokio-postgres = "0.7.18"

[dev-dependencies]
criterion = "0.8.2"
trybuild = "1.0.116"
zstd = "0.13.3"

[[bench]]
name = "replay_core"
harness = false
