[workspace]
members = [".", "durust-macros", "benchtools"]

[package]
name = "durust"
version = "0.1.2"
edition = "2024"
description = "A durable workflow runtime for Rust services."
license = "MIT"
repository = "https://github.com/danthegoodman1/durust"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
s3 = ["dep:rust-s3"]

[dependencies]
deadpool-postgres = { version = "0.14.1", optional = true }
durust-macros = { version = "0.1.2", path = "durust-macros" }
futures = "0.3.32"
hex = "0.4.3"
inventory = "0.3.24"
rmp-serde = "1.3.1"
rusqlite = { version = "0.37.0", optional = true }
rust-s3 = { version = "0.37.2", default-features = false, features = ["tokio-rustls-tls"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "net", "time", "sync"] }
tokio-postgres = { version = "0.7.18", optional = true }

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.27.0"
trybuild = "1.0.116"
zstd = "0.13.3"

[[bin]]
name = "cargo-durable"
path = "src/bin/cargo-durable.rs"
required-features = ["sqlite"]

[[bench]]
name = "replay_core"
harness = false
required-features = ["sqlite"]
