[package]
name = "durust-benchtools"
version = "0.1.2"
edition = "2024"
description = "Benchmark workload, comparison, and reporting tools for durust development."
license = "MIT"
publish = false

[dependencies]
durust = { path = "..", features = ["sqlite", "postgres"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "time", "sync", "net"] }
tokio-postgres = "0.7.18"
