[package]
name = "durust-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the durust durable workflow runtime."
license = "MIT"
repository = "https://github.com/danthegoodman1/durust"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "visit"] }
